Show errors for whole line

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,5 @@
 {
   "coc.preferences.formatOnSaveFiletypes": ["python"],
-  "python.venvFolders": ["envs",".pyenv",".direnv", "vspokienv"]
+  "python.venvFolders": ["envs",".pyenv",".direnv", "vspokienv"],
+  "diagnostic.checkCurrentLine": true
 }
