Don't format python headers

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "coc.preferences.formatOnSaveFiletypes": ["python"],
   "python.venvFolders": ["envs",".pyenv",".direnv", "vspokienv"],
-  "diagnostic.checkCurrentLine": true
+  "diagnostic.checkCurrentLine": true,
+  "python.formatting.autopep8Args": [ "--ignore=E402" ] 
 }
